ADD_SUBDIRECTORY( bindings )

FILE( GLOB H_FILES_PRIVATE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/IECoreGL/private/ "*.h" "*.inl" )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/IECoreGL/ "*.h" "*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB GLSL_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../glsl/ "*.glsl" )

FILE( GLOB GLSL_H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../glsl/IECoreGL "*.h" )

IF(NOT FREETYPE_FOUND )
    LIST( REMOVE_ITEM CXX_FILES
        Font.cpp
        FontLoader.cpp
        TextPrimitive.cpp )
ENDIF()

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} ${H_FILES_PRIVATE} )

SET( THIS_LIBS
     IECore
     ${CORTEX_GL_LIBS}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreGL STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreGL SHARED ${SOURCE_FILES} )
ENDIF()

TARGET_LINK_LIBRARIES( IECoreGL ${THIS_LIBS} )

INSTALL( TARGETS IECoreGL
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreGL
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )

INSTALL( FILES ${GLSL_FILES}
         DESTINATION glsl/
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )

INSTALL( FILES ${GLSL_H_FILES}
         DESTINATION glsl/IECoreGL
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
