INCLUDE_DIRECTORIES( ${MAYA_INCLUDE_PATH} )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     IECoreMaya
     dl
     ${MAYA_LIBRARIES} )

ADD_LIBRARY( IECoreMayaPlugin MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( IECoreMayaPlugin PROPERTIES OUTPUT_NAME IECore )
IF ( WINDOWS )
    SET_TARGET_PROPERTIES( IECoreMayaPlugin PROPERTIES SUFFIX ".mll" )
ELSE ()
  SET_TARGET_PROPERTIES( IECoreMayaPlugin PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( IECoreMayaPlugin ${THIS_LIBS} )

INSTALL( TARGETS IECoreMayaPlugin
         LIBRARY DESTINATION maya/plugins )
