FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     IECoreRI )

ADD_LIBRARY( rmanDisplay MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( rmanDisplay PROPERTIES OUTPUT_NAME ieDisplay )

TARGET_LINK_LIBRARIES( rmanDisplay ${THIS_LIBS} )

INSTALL( TARGETS rmanDisplay
         LIBRARY DESTINATION rmanDisplays/ieDisplay )
