INCLUDE_DIRECTORIES( ${CORTEX_RMAN_HEADERS} )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     ${CORTEX_RMAN_LIBRMAN}
     ${Boost_LIBRARIES} )

ADD_LIBRARY( rmanProcedural MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( rmanProcedural PROPERTIES OUTPUT_NAME iePython )

TARGET_LINK_LIBRARIES( rmanProcedural ${THIS_LIBS} )

INSTALL( TARGETS rmanProcedural
         LIBRARY DESTINATION rmanProcedurals/python )
