ADD_SUBDIRECTORY( bindings )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreAlembic/*.h" "../../include/IECoreAlembic/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )
SET( THIS_LIBS
     IECore
     ${CORTEX_ALEMBIC_LIBS}
     ${HDF5_LIBRARIES}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreAlembic STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreAlembic SHARED ${SOURCE_FILES} )
ENDIF()

SET_PROPERTY( TARGET IECoreAlembic PROPERTY COMPILE_DEFINITIONS IECOREALEMBIC_EXPORTS )

TARGET_LINK_LIBRARIES( IECoreAlembic ${THIS_LIBS} )

INSTALL( TARGETS IECoreAlembic
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreAlembic )
