ADD_SUBDIRECTORY( bindings )
ADD_SUBDIRECTORY( outputDriver )
ADD_SUBDIRECTORY( procedural )

FILE( GLOB H_FILES_PRIVATE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreArnold/private/*.h" "../../include/IECoreArnold/private/*.inl" )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreArnold/*.h" "../../include/IECoreArnold/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} ${H_FILES_PRIVATE} )

SET( THIS_LIBS
     IECore
     ${CORTEX_ARNOLD_LIBARNOLD}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreArnold STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreArnold SHARED ${SOURCE_FILES} )
ENDIF()

SET_PROPERTY( TARGET IECoreArnold PROPERTY COMPILE_DEFINITIONS IECOREARNOLD_EXPORTS )

TARGET_LINK_LIBRARIES( IECoreArnold ${THIS_LIBS} )

INSTALL( TARGETS IECoreArnold
         DESTINATION lib )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreArnold )
