SET( H_FILES
     ${IECORE_ALEMBIC_BINDING_HEADERS} )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreAlembic
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreAlembic MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
    SET_TARGET_PROPERTIES( _IECoreAlembic PROPERTIES SUFFIX ".pyd" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreAlembic ${THIS_LIBS} )

INSTALL( TARGETS _IECoreAlembic
         LIBRARY DESTINATION python/IECoreAlembic )

INSTALL( FILES ${IECORE_ALEMBIC_PYTHON_SCRIPTS}
         DESTINATION python/IECoreAlembic
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
